namespace SET09102_2024_5.Models
{
    public class BackupInfo
    {
        public string FileName { get; set; }
        public DateTime CreatedOn { get; set; }
    }
}
